# eqvilent-tech-task

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  diff_k8s_manifests.py  pyproject.toml
tests/: test_abstract.py  test_files.py
